# metamodule-mschack

./: CMakeLists.txt  LICENSE  plugin-mm.json
metamodule-plugins/: mscHack.mmplugin
mschack-VCV-Rack-Plugins/src/: 3Ch_Osc.cpp  ARP700.cpp  ASAF8.cpp  Alienz.cpp  Compressor.cpp  Dronez.cpp  Lorenz.cpp  MasterClockx4.cpp  Maude221.cpp  Mixer_x_x_x.hpp  Morze.cpp  OSC_WaveMorph_3.cpp  PingPong.cpp  SEQ_6x32x16.cpp  SEQ_Envelope_8.cpp  Seq_Triad2.cpp  StepDelay.cpp  SynthDrums.cpp  Windz.cpp  mscHack.cpp  mscHack.hpp  mscHack_Controls.hpp
